--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "homepage": "https://achristoff.github.io/Aleks",
   "scripts": {
-    "deploy": "gh-pages -d Aleks-Page"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "gh-pages": "^2.0.1",
