--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://achristoff.github.io/Aleks",
   "scripts": {
     "predeploy": "npm run dist",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
   },
   "dependencies": {
     "gh-pages": "^2.0.1",
