--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "Test",
+  "name": "name",
+  "description": "description",
+  "authors": "author",
   "version": "1.0.0",
-  "homepage": "https://achristoff.github.io/Aleks",
-  "scripts": {
-    "predeploy": "npm run dist",
-    "deploy": "gh-pages -d dist",
-  },
+  "main": "pathToMain",
   "dependencies": {
-    "gh-pages": "^2.0.1",
-    "handlebars": "^4.1.1",
-    "jquery": "^3.3.1",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.0",
+    "handlebars": "^4.0.11",
     "sammy": "^0.7.6"
   }
 }
